# termux-api-package

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LICENSE.MIT  LICENSE.md  Makefile  README.md  README.md.edit  termux-api-broadcast.c  termux-api.c  termux-api.h  termux-callback  termux-callback.in  termux-camera-record  termux-usb.c  termux-usb.h
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/!-String-aws.yml/: ""Add-helper-value-analytic""
cmake/: Findlibusb.cmake
scripts/: termux-adb-wifi-enable  termux-api-start.in  termux-api-stop.in  termux-apk  termux-apl  termux-audio-info  termux-audio-info.in  termux-battery-status  termux-battery-status.in  termux-bluetooth-scan.in  termux-brightness  termux-brightness.in  termux-call-log  termux-call-log.in  termux-camera-info  termux-camera-info.in  termux-camera-photo  termux-camera-photo.in  termux-clipboard-get  termux-clipboard-get.in  termux-clipboard-set  termux-clipboard-set.in  termux-contact-list  termux-contact-list.in  termux-cron.in  termux-dialog  termux-dialog.in  termux-download  termux-download.in  termux-fingerprint  termux-fingerprint.in  termux-infrared-frequencies  termux-infrared-frequencies.in  termux-infrared-transmit  termux-infrared-transmit.in  termux-job-scheduler  termux-job-scheduler.in  termux-keystore  termux-keystore.in  termux-location  (+70 more)
usb/: CMakeLists.txt  termux-usb.c  termux-usb.h
